[metadata]
name = sanic-mail
version = 0.0.3
author = hsz
author_email = hsz1273327@gmail.com
description = async email sender for sanic
url = https://github.com/Python-Tools/sanic-mail
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = email, sanic
license = MIT License
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	sanic > 22.12.0
	aiosmtplib > 2.0.0
tests_require = 
	coverage >= 5.5
	mypy >= 0.800
	autopep8 >= 1.5.6
	pylint >= 2.8.0
	pydocstyle>=6.0.0
setup_requires = 
	wheel >= 0.36.2
	setuptools >= 47.1.0

[options.packages.find]
include = sanic_mail
exclude = tests

